# useful

./: .env.dev  .gitignore  README.md  aerich.ini  alembic.ini  docker-compose.yml  main.py  prestart.sh  pyproject.toml
migrations/models/: 0_20210214184438_init.sql  0_20210215091559_init.sql
scripts/: createsuperuser.py
src/app/: routers.py
src/app/auth/: api.py  crud.py  jwt.py  logic.py  models.py  permissions.py  schemas.py  security.py  send_email.py  service.py
src/app/base/: crud_base.py  model_base.py  service_base.py
src/app/base/utils/: db.py  email.py  generate.py
src/app/blog/: models.py  routers.py  schemas.py  service.py
src/app/blog/endpoint/: blogCategory.py  comment.py  post.py  tag.py
src/app/board/: models.py  routers.py  schemas.py  service.py
src/app/board/endpoint/: blogCategory.py  category.py  project.py  task.py  toolkit.py
src/app/tests/: test_board_app.py
src/app/user/: api.py  crud.py  models.py  schemas.py  service.py
src/app/user/endpoint/: admin.py  users.py
src/config/: settings.py  social_app.py  tortoise_conf.py
src/db/: base.py  session.py
src/db/migrations/: env.py
src/db/migrations/models/: 0_20210222065933_init.sql  0_20210302083912_init.sql  0_20210302113726_init.sql  1_20210302084838_update.sql
src/email-templates/: new_account.html
src/lib/github_api/: schemas.py  service.py
