[tool.poetry]
name = "fastapi_useful"
version = "0.1.0"
description = "Useful blog based on FastAPI/ SQLAlchemy/ Postgres etc."
authors = ["crayzee <twopik@gmail.com>"]
license = "Free"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.63.0"}
SQLAlchemy = "^1.3.23"
alembic = "^1.5.4"
emails = "^0.6"
PyJWT = "^2.0.1"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.8.6"
Authlib = "^0.15.3"
typer = "^0.3.2"
httpx = "^0.16.1"
tortoise-orm = "^0.16.21"
aerich = "^0.5.0"
asyncpg = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
